tests/NormalTests/paczka1/small_fuzzy/70809736.err
Error in line 1: Xk3ls A434 42,2
Error in line 4: EeXsBm A686 566,6
Error in line 12: 2upqanlu7 A434 10,0
